--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,13 @@
     <title>Placeholder title</title>
     <link rel="stylesheet" href="css/styles.min.css" />
   </head>
-
   <body>
+    <p class="light">Acrom-Light texttexttexttext</p>
+    <p class="regular">Acrom-Regular texttexttexttext</p>
+    <p class="medium">Acrom-Medium texttexttexttext</p>
+    <p class="bold">Acrom-Bold texttexttext</p>
+    <p class="extra">Acrom-ExtraBold texttexttext</p>
+    <h1>dfwvrevervrevrevrevervrevrevrevervrverv RV</h1>
     <script src="js/scripts.min.js"></script>
   </body>
 </html>
