--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,9 @@
     <p class="bold">Acrom-Bold texttexttext</p>
     <p class="extra">Acrom-ExtraBold texttexttext</p>
     <h1>dfwvrevervrevrevrevervrevrevrevervrverv RV</h1>
+    //= html/header.html
+    //= html/award.html
+    //= html/footer.html
     <script src="js/scripts.min.js"></script>
   </body>
 </html>
