--- a/src/html/award.html
+++ b/src/html/award.html
@@ -1,171 +1,210 @@
-<div class="container">
-    <div class="row">
-      <div class="col12">
-        <h4 class="title">[ Кто мы такие и почему всё это рассказываем_ ]</h4>
-        <h5 class="sub-title">[ Награды ]</h5>
-      </div>
-      <div class="col12">
-        <h4 class="title">Best IT Eduсation 2015</h4>
-        <p class="description">
-          <span class="bold">Награждена компания GoIT</span> за вклад в
-          подготовку сильных Junior-специалистов.
-        </p>
-        <div class="img-wrp">
-          <img class="awards" src="./images/award-1.png" alt="премия2015" />
+<section class="container container--award">
+  <!-- <div class="row"> -->
+  <!-- <div class="col-12"> -->
+  <h3 class="title">
+    [ Кто мы такие <br class="br" />
+    и почему <br class="br-ls" />
+    всё это рассказываем_ ]
+  </h3>
+  <!-- </div> -->
+  <!-- <div class="col-12"> -->
+  <div class="row psr">
+    <!-- <div class="col-12"> -->
+    <h4 class="subtitle">
+      <span class="subtitle-txt"> [ Награды ]</span>
+    </h4>
+    <!-- </div> -->
+    <!-- <div class="col-12"> -->
+    <div class="cards">
+      <!-- 1 -->
+      <div class="col-12 col-md-4 card card--award">
+        <div class="card__wrp">
+          <div class="card__txt">
+            <h6 class="card__title">
+              Best IT Eduсation 2015
+            </h6>
+            <p class="card__description">
+              <span class="txt-black">Награждена компания GoIT</span> за вклад в
+              подготовку сильных Junior-специалистов
+            </p>
+          </div>
+          <div class="card__img-wrp card__img-wrp--1">
+            <img
+              src="./images/awards-1.png"
+              alt="Best IT Eduсation"
+              class="card__img"
+            />
+          </div>
         </div>
       </div>
-      <div class="col12">
-        <h4 class="title">Ukranian IT Awards 2016</h4>
-        <p class="description">
-          <span class="bold"
-            >Награжден сооснователь GoIT Андрей Пивоваров</span
-          >
-          за выдающийся вклад в IT-обучение украинских Junior-разработчиков.
-        </p>
-        <div class="img-wrp">
-          <img class="awards" src="./images/award-2.png" alt="премия2016" />
+      <!-- 2 -->
+      <div class="col-12 col-md-4 card card--award">
+        <div class="card__wrp">
+          <div class="card__txt">
+            <h6 class="card__title">
+              Ukranian IT Awards 2016
+            </h6>
+            <p class="card__description">
+              <span class="txt-black"
+                >Награжден сооснователь GoIT Андрей Пивоваров</span
+              >
+              за выдающийся вклад в IT-обучение украинских Junior-разработчиков.
+            </p>
+          </div>
+          <div class="card__img-wrp card__img-wrp--2">
+            <img
+              src="./images/awards-2.png"
+              alt="Ukranian IT Awards"
+              class="card__img"
+            />
+          </div>
         </div>
       </div>
-      <div class="col12">
-        <h4 class="title">Украинская Народная Премия 2018</h4>
-        <p class="description">
-          <span class="bold">Победа в номинации IT-образование 2018</span>.
-          Всеукраинский национальный проэкт определил GoIT лидером в отрасли
-          IT образования.
-        </p>
-        <div class="img-wrp">
-          <img class="awards" src="./images/award-3.png" alt="премия2018" />
-        </div>
-      </div>
-      <div class="col12 col12-bg">
-        <h5 class="sub-title">[ Go for IT ]</h5>
-        <h4 class="title">GoIT выиграла тендер ПР ООН Украина</h4>
-        <p class="description">
-          На реализацию социального проекта по бесплатному обучению Frontend.
-          Мы стали самой молодой компанией-партнером ПР ООН. В рамках проэкта
-          Go for IT мы обязались обучить Frontend-разработке 300 переселенцев.
-        </p>
-      </div>
-      <div class="col12">
-        <h5 class="sub-title">[ Партнеры ]</h5>
-        <!-- partner-1 -->
-        <div class="partners">
-          <a class="partner-link" href="https://www.training.epam.ua/#/About"
-            ><img
-              class="partner-logo"
-              src="./images/partners/epam.png"
-              alt="epam"
-          /></a>
-
-          <a
-            class="partner-link"
-            href="https://www.kn-portal.com/about_us/about_us/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/kuehne-nagel.png"
-              alt="kuehne+nagel"
-          /></a>
-
-          <a class="partner-link" href="https://www.crytek.com/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/crytek.png"
-              alt="crytek"
-          /></a>
-
-          <a class="partner-link" href="https://www.ciklum.com/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/ciklum.png"
-              alt="ciklum"
-          /></a>
-
-          <a class="partner-link" href="https://jobs.innovecs.com/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/inovecs.png"
-              alt="innovecs"
-          /></a>
-
-          <a
-            class="partner-link"
-            href="https://softserveinc.com/en-us/career/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/softserve.png"
-              alt="softserve|career"
-          /></a>
-
-          <a class="partner-link" href="https://www.globallogic.com/ua/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/globalLogic.png"
-              alt="GlobalLogic"
-          /></a>
-
-          <a class="partner-link" href="https://alfabank.ua/ru"
-            ><img
-              class="partner-logo"
-              src="./images/partners/alfaBank.png"
-              alt="Aльфа банк"
-          /></a>
-
-          <a class="partner-link" href="https://goiteens.ua/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/goITeens.png"
-              alt="Go ITeens"
-          /></a>
-
-          <a class="partner-link" href="https://www.infopulse.com/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/infopulse.png"
-              alt="infopulse"
-          /></a>
-
-          <a class="partner-link" href="https://www.ubisoft.com/ru-ru/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/ubisoft.png"
-              alt="ubisoft"
-          /></a>
-
-          <a class="partner-link" href="https://www.luxoft.com/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/luxoft.png"
-              alt="Luxoft"
-          /></a>
-
-          <a class="partner-link" href="https://lenal.biz/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/lenal.png"
-              alt="Lenal"
-          /></a>
-
-          <a class="partner-link" href="https://www.terrasoft.ua/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/terrasoft.png"
-              alt="Terrasoft"
-          /></a>
-
-          <a class="partner-link" href="https://www.grossum.com/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/grossum.png"
-              alt="grossum"
-          /></a>
-
-          <a class="partner-link" href="https://www.templatemonster.com/ru/"
-            ><img
-              class="partner-logo"
-              src="./images/partners/templateMonster.png"
-              alt="TemplateMonster"
-          /></a>
+      <!-- 3 -->
+      <div class="col-12 col-md-4 card card--award">
+        <div class="card__wrp">
+          <div class="card__txt">
+            <h6 class="card__title">
+              Украинская Народная Премия 2018
+            </h6>
+            <p class="card__description">
+              <span class="txt-black"
+                >Победа в номинации <br class="br" />
+                IT-образование 2018</span
+              >
+              Всеукраинский национальный проект определил GoIT лидером в отрасли
+              IT образования.
+            </p>
+          </div>
+          <div class="card__img-wrp card__img-wrp--3">
+            <img
+              src="./images/awards-3.png"
+              alt="Українська народна премія"
+              class="card__img"
+            />
+          </div>
         </div>
       </div>
     </div>
+    <!-- </div> -->
   </div>
+  <!-- ============================= -->
+
+  <div class="tender-partners">
+    <div class="tender">
+      <h4 class="subtitle">
+        <span class="subtitle-txt"> [ Go for IT ]</span>
+      </h4>
+      <h6 class="tender__title">
+        GoIT выиграла тендер ПР ООН Украина
+      </h6>
+      <p class="tender__description">
+        На реализацию социального проекта по бесплатному обучению Frontend. Мы
+        стали самой молодой компанией-партнером ПР ООН. В рамках проекта Go for
+        IT мы обязались обучить Frontend-разработке 300 переселенцев.
+      </p>
+    </div>
+    <div class="partners">
+      <h4 class="subtitle">
+        <span class="subtitle-txt">[ Партнеры ]</span>
+      </h4>
+      <div class="partners-list">
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img src="./images/partners/epam.png" alt="epam" class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/kuehne-nagel.png"
+            alt="kuehne-nagel"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/ciklum.png"
+            alt="ciklum"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/crytek.png"
+            alt="crytek"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/softserve.png"
+            alt="softserve"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/globalLogic.png"
+            alt="globalLogic"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/goITeens.png"
+            alt="goITeens"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/alfaBank.png"
+            alt="alfaBank"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/inovecs.png"
+            alt="inovecs"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/infopulse.png"
+            alt="infopulse"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/grossum.png"
+            alt="grossum"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/templateMonster.png"
+            alt="templateMonster"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/luxoft.png"
+            alt="luxoft"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/ubisoft.png"
+            alt="ubisoft"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/lenal.png"
+            alt="lenal"
+            class="partner__img"
+        /></a>
+        <a href="#" class="partner" target="_blank" rel="nofollow noopener"
+          ><img
+            src="./images/partners/terrasoft.png"
+            alt="terrasoft"
+            class="partner__img"
+        /></a>
+      </div>
+    </div>
+  </div>
+  <!-- ======================= -->
+  <!-- </div> -->
+</section>
