--- a/src/index.html
+++ b/src/index.html
@@ -8,73 +8,11 @@
     <link rel="stylesheet" href="css/styles.min.css" />
   </head>
   <body>
-    <section class="career-consultation">
-      <div class="container--fluid">
-        <h1 class="section-header consultation-header">[ Также вы получите личную консультацию по старту карьеры_ ]</h1>
-        <div class="consultation-items">
-          <div class="consultation-stage">
-            <h1 class="consultation-stage__number">01</h1>
-            <p class="consultation-stage__description">Определите какое направление будет легче, интересней и быстрее освоить <span class="highlight--bold">именно вам.</span></p>
-          </div>
-          <div class="consultation-stage">
-            <h1 class="consultation-stage__number">02</h1>
-            <p class="consultation-stage__description">Вместе с консультантом сформируете пошаговый план входа в IT <span class="highlight--bold">с учетом ваших текущих знаний</span> и навыков.</p>
-          </div>
-          <div class="consultation-stage">
-            <h1 class="consultation-stage__number">03</h1>
-            <p class="consultation-stage__description">Получите доступ <span class="highlight--bold">к 3-м развернутым видео</span> по ключевым направлениям в IT, чтобы самостоятельно изучить все детали.</p>
-          </div>
-        </div>
-        <div class="btn-box">
-          <button class="btn btn-top">Получить бесплатный доступ ко всем материалам</button>
-        </div>
-      </div>
-    </section>
-    <section class="it-statistics container">
-      <h1 class="section-header statistics-header">[ Почему сфера IT так интересна ]</h1>
-      <div class="statistic-info">
-        <div class="statistic-items">
-          <img class="map" src="./images/map.png" alt="">
-          <img class="map-768" src="./images/map-768.png" alt="">
-          <img class="map-1200" src="./images/map-1200.png" alt="">
-          <p class="statistics-intro">Сегодня подготовили для вас обзор рынка из отчета ассоциации IT Ukraine</p>
-          <div class="facts-box">
-            <div class="statistic-fact"><span class="statistic-fact__fact-size">12634</span><p class="statistic-fact__description">IT-компании зарегистрированы в Украине</p></div>
-            <div class="statistic-fact"><span class="statistic-fact__fact-size">2500$</span><p class="statistic-fact__description">Средний доход IT-специалиста</p></div>
-            <div class="statistic-fact"><span class="statistic-fact__fact-size">127тыс.</span><p class="statistic-fact__description">Человек работает в Украинской IT-сфере сейчас</p></div>
-            <div class="statistic-fact"><span class="statistic-fact__fact-size">2000</span><p class="statistic-fact__description">Новых IT-компаний появилось за 2 года</p></div>
-            <div class="statistic-fact"><span class="statistic-fact__fact-size">83%</span><p class="statistic-fact__description">Всех затрат IT-компаний - это затраты на оплату труда разработчиков</p></div>
-            <div class="statistic-fact"><span class="statistic-fact__fact-size">200тыс.</span><p class="statistic-fact__description">IT-специалистов по прогнозам будет в стране через 4-5 лет</p></div>
-          </div>
-          <div class="it-incomes">
-            <p class="incomes-header">Доход IT-шников превышает среднюю зарплату по другим отраслям</p>
-            <div class="incomes-items">
-              <div class="income-value"><span class="income-value__size">в 7 раз</span><p class="income-value__description">при официальном трудоустройстве IT-специалиста</p></div>
-              <div class="income-value"><span class="income-value__size">в 7,8 раз</span><p class="income-value__description">при работе через ФОП</p></div>
-            </div>
-          </div>
-        </div>
-        <div class="it-bonuses">
-          <h1 class="section-header it-bonuses__header">[ При этом IT компании предлагают... ]</h1>
-          <ul class="it-bonuses__list">
-            <li class="it-bonuses__list__item">Стабильно высокие зарплаты в долларах.</li>
-            <li class="it-bonuses__list__item">Стабильный карьерный рост согласно вашим реальным знаниям и навыкам.</li>
-            <li class="it-bonuses__list__item">Комплексный соц. пакет</li>
-            <li class="it-bonuses__list__item">Отличные условия труда в современных офисах.</li>
-            <li class="it-bonuses__list__item">Гибкий рабочий график и возможность работы даже из дома.</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <section class="own-way">
-      <div class="container--fluid own-way__items">
-        <h1 class="own-way__header">Устал растрачивать свой потенциал, работая за копейки в стагнирующей отрасли или на ненависной тебе работе?</h1>
-        <p class="own-way__description-box"><span class="own-way__description--extrabold">Сейчас на IT рынке работы намного больше, чем квалифицированных кадров, способных ее выполнять.</span>
-        <span class="own-way__description--regular">Работа, за которую платят много и без задержек. Потому что конкуренция за толковых специалистов между компаниями крайне высока. И эта тенденция будет только усиливаться.</span></p> 
-        <h1 class="button-preview">[ Узнай, как именно начнется твой путь в IT_ ]</h1>
-        <button class="btn btn-low">хочу узнать свой путь в IT</button>
-      </div>
-    </section>
+      //= html/header.html
+      //= html/questions.html
+      //= html/career-consultation.html
+      //= html/it-statistics.html
+      //= html/own-way.html
     <script src="js/scripts.min.js"></script>
   </body>
 </html>
