--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
       //= html/career-consultation.html
       //= html/it-statistics.html
       //= html/own-way.html
+      //= html/award.html
+      //= html/footer.html
     <script src="js/scripts.min.js"></script>
   </body>
 </html>
